==> 2345vor/mm32f3277g8p-cmcc-oneos-V1.0.0/drivers/hal/mm32/drivers/f327x/drv_gpio.c <==
#include "drv_gpio.h"
#include <mm32_hal.h>
#define MM32_PIN(index, rcc, gpio, gpio_index) { index, RCC_##rcc##_GPIO##gpio, GPIO##gpio, GPIO_Pin_##gpio_index, GPIO_PortSourceGPIO##gpio, GPIO_PinSource##gpio_index}
#define MM32_PIN_RESERVED {-1, 0, 0, 0, 0, 0}
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

OS_INLINE os_int32_t bit2bitno(os_uint32_t bit)
{
    int i;
    for (i = 0; i < 32; i++)
    {
        if ((0x01 << i) == bit)
        {
            return i;
        }
    }
    return -1;
}

OS_INLINE const struct pin_irq_map *get_pin_irq_map(os_uint32_t pinbit)
{
    os_int32_t mapindex = bit2bitno(pinbit);
    if (mapindex < 0 || mapindex >= ITEM_NUM(pin_irq_map))
    {
        return OS_NULL;
    }
    return &pin_irq_map[mapindex];
}

void EXTI0_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    pin_irq_hdr(0);
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI1_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    pin_irq_hdr(1);
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI2_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    pin_irq_hdr(2);
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI3_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    pin_irq_hdr(3);
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI4_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    pin_irq_hdr(4);
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI9_5_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    if (EXTI_GetITStatus(EXTI_Line5) != RESET)
    {
        pin_irq_hdr(5);
    }
    if (EXTI_GetITStatus(EXTI_Line6) != RESET)
    {
        pin_irq_hdr(6);
    }
    if (EXTI_GetITStatus(EXTI_Line7) != RESET)
    {
        pin_irq_hdr(7);
    }
    if (EXTI_GetITStatus(EXTI_Line8) != RESET)
    {
        pin_irq_hdr(8);
    }
    if (EXTI_GetITStatus(EXTI_Line9) != RESET)
    {
        pin_irq_hdr(9);
    }
    /* leave interrupt */
    os_irq_unlock(level);
}

void EXTI15_10_IRQHandler(void)
{
    os_base_t level;
    /* enter interrupt */
    level = os_irq_lock();	
    if (EXTI_GetITStatus(EXTI_Line10) != RESET)
    {
        pin_irq_hdr(10);
    }
    if (EXTI_GetITStatus(EXTI_Line11) != RESET)
    {
        pin_irq_hdr(11);
    }
    if (EXTI_GetITStatus(EXTI_Line12) != RESET)
    {
        pin_irq_hdr(12);
    }
    if (EXTI_GetITStatus(EXTI_Line13) != RESET)
    {
        pin_irq_hdr(13);
    }
    if (EXTI_GetITStatus(EXTI_Line14) != RESET)
    {
        pin_irq_hdr(14);
    }
    if (EXTI_GetITStatus(EXTI_Line15) != RESET)
    {
        pin_irq_hdr(15);
    }
    /* leave interrupt */
    os_irq_unlock(level);
}
